--- a/02_dom/one.html
+++ b/02_dom/one.html
@@ -13,7 +13,15 @@
 </head>
 <body class="bg-black">
     <div>
-        <h1 id="title" class="heading">DOM Learning</h1>
+        <h1 id="title" class="heading">DOM Learning <span style="display: none;">test text</span></h1>
+        <h2>Lorem, ipsum dolor.</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+        <h2>Lorem ipsum dolor sit amet.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+        <ul>
+            <li class="list item">one</li>
+            <li class="list item">two</li>
+            <li class="list item">three</li>
+        </ul>
 </body>
 </html>
